--- a/index.html
+++ b/index.html
@@ -1,30 +1,27 @@
 <html>
 <head>
-<title>Hoja de vidad</title>
+<title>Hoja de vida</title>
 </head>
 <body>
 <br>
 <br>
 <div align="center">
-<img src="imagenes\yo.jpg"alt"ese soy yo">
+<img src="yo.jpg"alt="ese soy yo"height="100"width="70">
 </div>
 <hr size  ="25"noshade><br>
-<i>Hoja de vida <br>Jairo Garcia Ambrocio<br>
+<i>Hoja de vida <br>
 <b>Nombre:<br>
-Jairo
+Antony Abdely <br>
 <h1>Datos personales</h1>
-Nombre:Jairo<br>
-Apellidos:Garcia Ambrocio<br>
-Fecha de nacimiento: 15/05/2007<br>
+Nombre:Antony Abdely<br>
+Apellidos:Aguilar Valenzuela<br>
+Fecha de nacimiento: 11/02/2008<br>
 <h2>Datos academicos</h2>
-Primaria: Colegio Emmanuel<br>
-Basicos: I.P.C<br>
+Primaria: Escuela UNESCO<br>
+Basicos: Colegio la roca<br>
 Carrera: I.P.C<br>
 <h3>Datos laborales</h3>
-Panaderia<br>
-Internet<br>
-Albañil<br>
-Tienda de ropa<br>
+Mecanico en vitatrac<br>
 </i></br>
 <hr size="25"noshade><br>
 </body>
